fixed time and date alignment, adjusted padding top for tooltip and removed unnecessary whitespacing

--- a/src/components/inputs/date/date.scss
+++ b/src/components/inputs/date/date.scss
@@ -27,6 +27,7 @@
 
 .timeInput {
   width: auto;
+  padding-top: 8px;
   :hover {
     cursor: text;
   }
