--- a/src/components/inputs/tooltip/tooltip.scss
+++ b/src/components/inputs/tooltip/tooltip.scss
@@ -4,4 +4,5 @@
   z-index: 999;
   margin-bottom: 0.2rem;
   padding-left: 8px;
+  padding-top: 8px;
 }
